tests/ui/associated-consts/wrong-projection-self-ty-invalid-bivariant-arg.stderr
error[E0392]: type parameter `T` is never used
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg.rs:1:13
   |
LL | struct Fail<T>;
   |             ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error[E0599]: no associated item named `C` found for struct `Fail<()>` in the current scope
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg.rs:9:17
   |
LL | struct Fail<T>;
   | -------------- associated item `C` not found for this struct
...
LL |     Fail::<()>::C
   |                 ^ associated item not found in `Fail<()>`
   |
   = note: the associated item was found for
           - `Fail<i32>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0392, E0599.
For more information about an error, try `rustc --explain E0392`.
